# OpenGL-Breakout

./: CMakeLists.txt  README.md
assets/levels/: test.lvl
lib/Debug/: glfw3d.lib  sfml-audio-s-d.lib  sfml-system-s-d.lib
lib/Release/: sfml-audio-s.lib  sfml-system-s.lib
src/: CMakeLists.txt  ResourceManager.cpp  SpriteRenderer.cpp  TextRenderer.cpp  config.h.in  main.cpp
src/Game/: BallObject.cpp  CMakeLists.txt  Game.cpp  GameLevel.cpp  GameObject.cpp  ParticleGen.cpp  PostProcessor.cpp  PowerUp.cpp
src/Shader/: CMakeLists.txt  Shader.cpp
src/Texture/: CMakeLists.txt  Texture.cpp
src/include/: CustomTypes.h  Game.h  ResourceManager.h  Shader.h  SpriteRenderer.h  TextRenderer.h  Texture.h
src/include/Game/: BallObject.h  Game.h  GameLevel.h  GameObject.h  ParticleGen.h  PostProcessor.h  PowerUp.h
src/shaders/: SpriteRender.frag  SpriteRender.vert  effects.frag  effects.vert  particle.frag  particle.vert
